correção tela de fotografia

--- a/photography.html
+++ b/photography.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Elen - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Nicarágua</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link href="images/favicon.png" rel="icon">
+
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
@@ -196,7 +198,7 @@
 								</div>
 							</a>
 						</div>
-				
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
 								style="background-image: url('images/img12.jpeg');">
@@ -207,7 +209,7 @@
 								</div>
 							</a>
 						</div>
-						
+
 					</div>
 				</div>
 			</section>
