--- a/about.html
+++ b/about.html
@@ -121,8 +121,8 @@
       <div class="colorlib-footer">
         <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           Copyright &copy;
-          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
-            class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+          <script>document.write(new Date().getFullYear());</script> Feira das Nações <i class="icon-heart" aria-hidden="true"></i> <a href="#"
+          target="_blank">3ºA</a>
           <!--ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
