--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 											<h3><a href="#">Dave Lewis</a>, <span>Nov. 28, 2018</span></h3>
 										</div>
 									</div>
-									<div class="meta-wrap align-items-center">
+									<!-- div class="meta-wrap align-items-center">
 										<div class="half order-md-last">
 											<p class="meta">
 												<span><i class="icon-heart"></i>3</span>
@@ -298,7 +298,7 @@
 											<p><a href="#" class="btn py-2">Continue Lendo<span
 														class="ion-ios-arrow-forward"></span></a></p>
 										</div>
-									</div>
+									</div -->
 								</div>
 							</div>
 						</div>
@@ -317,10 +317,10 @@
 										<a href="#" class="img" style="background-image: url(images/person_2.jpg);"></a>
 										<div class="ml-3 info">
 											<span>Escrito por:</span>
-											<h3><a href="#">Dave Lewis</a>, <span>Nov. 28, 2018</span></h3>
+											<h3><a href="#">La Prensa</a>, <span>Nov. 28, 2018</span></h3>
 										</div>
 									</div>
-									<div class="meta-wrap align-items-center">
+									<!-- div class="meta-wrap align-items-center">
 										<div class="half order-md-last">
 											<p class="meta">
 												<span><i class="icon-heart"></i>3</span>
@@ -332,7 +332,7 @@
 											<p><a href="#" class="btn py-2">Continue Lendo<span
 														class="ion-ios-arrow-forward"></span></a></p>
 										</div>
-									</div>
+									</div -->
 								</div>
 							</div>
 						</div>
@@ -354,7 +354,7 @@
 											<h3><a href="#">Dave Lewis</a>, <span>Nov. 28, 2018</span></h3>
 										</div>
 									</div>
-									<div class="meta-wrap align-items-center">
+									<!-- div class="meta-wrap align-items-center">
 										<div class="half order-md-last">
 											<p class="meta">
 												<span><i class="icon-heart"></i>3</span>
@@ -366,11 +366,20 @@
 											<p><a href="#" class="btn py-2">Continue Lendo<span
 														class="ion-ios-arrow-forward"></span></a></p>
 										</div>
-									</div>
+									</div -->
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4">
+
+
+
+
+
+
+
+
+
+						<!-- <div class="col-md-4">
 							<div class="blog-entry ftco-animate">
 								<a href="#" class="img img-2" style="background-image: url(images/image_7.jpg);"></a>
 								<div class="text text-2 pt-2 mt-3">
@@ -556,7 +565,14 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
+
+
+
+
+
+
+
 					</div>
 				</div>
 			</section>
