--- a/photography.html
+++ b/photography.html
@@ -251,7 +251,7 @@
 								<h2 class="ftco-heading-2">Sobre</h2>
 								<div class="block-23 mb-3">
 									<ul>
-										<li><span class="icon icon-map-marker"></span><span class="text">Nicaragua</span></li>
+										<li><a href="geografia.html"><span class="icon icon-map-marker"></span><span class="text">Geografia</span></a></li>
 										<!-- <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392
 													3929 210</span></a></li> -->
 										<li><a href="about.html"><span class="icon icon-envelope"></span><span
