--- a/geografia.html
+++ b/geografia.html
@@ -507,7 +507,7 @@
 						</div>
 						<div class="col-md">
 							<div class="ftco-footer-widget mb-4">
-								<h2 class="ftco-heading-2">Sobre</h2>
+								<h2 class="ftco-heading-2">Páginas</h2>
 								<div class="block-23 mb-3">
 									<ul>
 										<li><a href="geografia.html"><span class="icon icon-map-marker"></span><span class="text">Geografia</span></a></li>
